@@ -99,20 +99,6 @@ name|hadoop
 operator|.
 name|hbase
 operator|.
-name|UnknownScannerException
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hbase
-operator|.
 name|client
 operator|.
 name|HTable
@@ -593,7 +579,7 @@ expr_stmt|;
 block|}
 catch|catch
 parameter_list|(
-name|UnknownScannerException
+name|IOException
 name|e
 parameter_list|)
 block|{
