@@ -252,6 +252,8 @@ Release 0.20.0 - Unreleased
    HBASE-1629  HRS unable to contact master
    HBASE-1633  Can't delete in TRUNK shell; makes it hard doing admin repairs
    HBASE-1641  Stargate build.xml causes error in Eclipse
+   HBASE-1627  TableInputFormatBase#nextKeyValue catches the wrong exception
+               (Doğacan Güney via Stack)
 
   IMPROVEMENTS
    HBASE-1089  Add count of regions on filesystem to master UI; add percentage
